--- a/employee_service/.render.yaml
+++ b/employee_service/.render.yaml
@@ -6,7 +6,5 @@ services:
     repo: https://github.com/MITTAL1104/staff-backend
     rootDir: employee_service
     buildCommand: ./mvnw clean install
-    startCommand: java -jar target/*.jar
-    envVars:
-      - key: JAVA_HOME
-        value: /opt/render/project/.render-java/jdk
+    startCommand: java -jar target/employee-0.0.1-SNAPSHOT.jar
+
